# jupyterlab-mp4

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
jupyterlab_mp4/labextension/: package.json
jupyterlab_mp4/labextension/static/: 549.0d7f7bd3f54de3dbf360.js  568.442531c19244d8aee543.js  remoteEntry.ce732d50ff9f0e1bb07c.js  style.js
src/: index.ts
style/: index.css
