[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_mp4/labextension/package.json"]
ensured-targets = ["jupyterlab_mp4/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_mp4/labextension/**", "yarn.lock", ".*", "package-lock.json"]

[tool.black]
line-length = 80

[tool.isort]
profile = 'black'
line_length = 80
